# compilers_project

./: .gitignore  CMakeLists.txt  alltest.decaf  ast.h  bparser.h  decaf.l  decaf.yy  flexer.cpp  flexer.h  flexer.l  hlexer.cpp  hlexer.h  hparser.cpp  hparser.h  hregex.in  lexer.h  lexer_decaf.cpp  location.hh  main.cpp  parser.h  parser_decaf.cpp  parser_decaf.hpp  position.hh  regex.cpp  regex.h  stack.hh  symbol_table.h  tac.h  test.decaf  test.tac  test2.decaf  test_script.py  token.h
lexer/: CMakeLists.txt  flexer.l  list_of_tokens.txt  main.cpp  regex.h  symbol_table.h  test_comments.decaf
parser/: CMakeLists.txt  hparser.cpp  hparser.h
test/: CMakeLists.txt  demo.decaf  test2.decaf  test_parser.cpp  testmain.cpp
test_files/: demo.decaf  e1.decaf  e2.decaf  e3.decaf  problem1.decaf  problem2.decaf  t1.decaf  t1.tac  t2.tac  t3.decaf  t3.tac  t4.decaf  t4.tac  t5.decaf  t5.tac  t6.decaf  t6.tac  t7.decaf  t7.tac  t8.decaf  t8.tac  t9.decaf  t9.tac  w1.decaf  w1.tac  w2.decaf  w2.tac  w3.decaf  w3.tac  w4.decaf  w4.tac  w5.decaf  w5.tac
